CateCrear pruebas para multiples categorias

--- a/src/Easanles/AtletismoBundle/Resources/views/Atleta/form_usuario.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Atleta/form_usuario.html.twig
@@ -1,7 +1,7 @@
    <div class="alert alert-info" role="alert"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span> Se creará el usuario al enviar el formulario del atleta.</div>
 
    {% if exception is defined %}
-   <div class="alert alert-danger alert-dismissible fade in" role="alert"> <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button> <strong>Error: </strong><span>{{ exception }}</span></div>
+   <div class="alert alert-danger alert-dismissible fade in" role="alert"> <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button> <strong>Error: </strong><span class="glyphicon glyphicon-exclamation-sign"></span> {{ exception }}</div>
    {% endif %}
    
 
