--- a/src/Easanles/AtletismoBundle/Resources/views/Categoria/form_cad_categoria.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Categoria/form_cad_categoria.html.twig
@@ -1,6 +1,6 @@
 
    {% if exception is defined %}
-   <div class="alert alert-danger alert-dismissible fade in" role="alert"> <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button><span>{{ exception }}</span></div>
+   <div class="alert alert-danger alert-dismissible fade in" role="alert"> <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button><span class="glyphicon glyphicon-exclamation-sign"></span> {{ exception }}</div>
    {% endif %}
 
    <div id="data_form" class="row">
@@ -9,7 +9,11 @@
 
     {{ form_errors(form) }}
     
-    <div class="form_row col-xs-offset-2 col-xs-8">
+    <div class="col-xs-offset-1 col-xs-10">
+       <span style="margin-right: 1em; white-space: nowrap;"><label>Categoría:</label> {{ form.vars.value.nombre }}</span>
+       <span style="margin-right: 1em; white-space: nowrap;"><label>Temporada inicial:</label> {{ form.vars.value.tIniVal }}/{{ (form.vars.value.tIniVal + 1)|slice(2, 2) }}</span> 
+    </div> 
+    <div class="form_row col-xs-offset-1 col-xs-10">
        {{ form_row(form.tFinVal) }}
     </div>
     
