--- a/src/Easanles/AtletismoBundle/Resources/views/Categoria/form_categoria.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Categoria/form_categoria.html.twig
@@ -5,7 +5,7 @@ Para realizar un cambio en una categoría de una temporada a otra, primero marca
 {% endif %}
 
    {% if exception is defined %}
-   <div class="alert alert-danger alert-dismissible fade in" role="alert"> <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button><span>{{ exception }}</span></div>
+   <div class="alert alert-danger alert-dismissible fade in" role="alert"> <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button><span class="glyphicon glyphicon-exclamation-sign"></span> {{ exception }}</div>
    {% endif %}
 
    <div id="data_form" class="row">
