--- a/src/Easanles/AtletismoBundle/Resources/views/Default/pant_cuenta.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Default/pant_cuenta.html.twig
@@ -52,7 +52,7 @@
          <div class="panel panel-default">
             <div class="panel-body">
                {% if exception is defined %}
-                  <div class="alert alert-danger alert-dismissible fade in" role="alert"> <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button> <span class="glyphicon glyphicon-remove" aria-hidden="true"> </span><span>{{ exception }}</span></div>
+                  <div class="alert alert-danger alert-dismissible fade in" role="alert"> <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button> <span class="glyphicon glyphicon-remove" aria-hidden="true"> </span><span class="glyphicon glyphicon-exclamation-sign"></span> {{ exception }}</div>
                {% endif %}
                <div id="data_form">
                   {{ form_start(form, {'action': path('cuenta')}) }}
