Fecha de fin de competiciones. Paginado de tablas

--- a/src/Easanles/AtletismoBundle/Resources/views/Atleta/hist_atleta.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Atleta/hist_atleta.html.twig
@@ -112,7 +112,7 @@
                                  <th>Prueba</th>
                                  <th class="hidden-xs">Categoría</th>
                                  <th>Última marca válida</th>
-                                 <th>Premios</th>
+                                 <th>Notas</th>
                               </tr>
                               {% for pru in com.prus %}
                                  <tr>
