--- a/src/Easanles/AtletismoBundle/Resources/views/Competicion/form_competicion.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Competicion/form_competicion.html.twig
@@ -72,14 +72,17 @@
        </div>
     </div>
     <div class=row">
-       <div class="form_row col-xs-12 col-sm-4">
+       <div class="form_row col-xs-6 col-md-3">
           {{ form_row(form.ubicacion) }}
        </div>
-       <div class="form_row col-xs-6 col-sm-4">
+       <div class="form_row col-xs-6 col-md-3">
           {{ form_row(form.sede) }}
        </div>
-       <div class="form_row col-xs-6 col-sm-4">
+       <div class="form_row col-xs-6 col-md-3">
           {{ form_row(form.fecha) }}
+       </div>
+       <div class="form_row col-xs-6 col-md-3">
+          {{ form_row(form.fechaFin) }}
        </div>
     </div>
     <div class=row">
