--- a/src/Easanles/AtletismoBundle/Resources/views/Informes/pant_records.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Informes/pant_records.html.twig
@@ -106,7 +106,7 @@
      <tbody>
         <tr>
            <th>Prueba</th>
-           <th><abbr class="visible-xs" title="Premios">P.</abbr><div class="hidden-xs">Premios</div></th>
+           <th><abbr class="visible-xs" title="Notas">P.</abbr><div class="hidden-xs">Notas</div></th>
            <th>Marca</th>
            {% if tipo != 2 %}<th>Atleta</th>{% endif %}
            <th><abbr class="visible-xs" title="Categoría">Cat.</abbr><div class="hidden-xs">Categoría</div></th>
