--- a/src/Easanles/AtletismoBundle/Resources/views/Informes/tabla_resultados.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Informes/tabla_resultados.html.twig
@@ -1,7 +1,7 @@
    <tr>
       <th><abbr title="Posición">Pos.</abbr></th>
       <th>Marca</th>
-      <th>Premios</th>
+      <th>Notas</th>
       <th>Atleta</th>
       {% if numIntentos > 1 %}
          <th><abbr title="Historial de intentos">Hist.</abbr></th>
