--- a/src/Easanles/AtletismoBundle/Resources/views/Intento/form_intento.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Intento/form_intento.html.twig
@@ -48,7 +48,7 @@
              <th class="hidden-xs{% if numIntentos == 1 %} hidden{% endif %}"><abbr title="Número de intento"># int.</abbr></th>
              <th colspan="2">Marca{% if unidades == "segundos" %} <small class="text-muted">(Horas / minutos / segundos / milésimas)</small>{% endif %}</th>
              {% if numIntentos > 1 %}<th>Validez<div class="text-muted" style="font-size: 10px;"><abbr title="Intentos inválidos máximos para fijar marca">I. máx.</abbr>: <span id="max-num-int">{{ numIntentos }}</span></div></th>{% endif %}
-             <th>Premios</th>
+             <th>Notas</th>
              {% if numIntentos > 1 %}
              <th><abbr title="Eliminar intento">Elim.</abbr></th>
              {% endif %}
