--- a/src/Easanles/AtletismoBundle/Resources/views/Atleta/list_atleta.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Atleta/list_atleta.html.twig
@@ -46,7 +46,7 @@
    <div id="container_header" class="row">
       <button class="updater hidden" onClick="location.reload()"></button>
       <div class="col-xs-6 col-sm-4">
-         <select class="form-control" onChange="goToUrl('{% if estadoAlta == true %}{{ path('listado_atletas') }}{% else %}{{ path('listado_atletas_bajas') }}{% endif %}' + atlSearchParam(this.value, {% if query is defined %}'{{query}}'{% else %}null{% endif %}))">
+         <select class="form-control" onChange="goToUrl('{% if estadoAlta == true %}{{ path('listado_atletas') }}{% else %}{{ path('listado_atletas_bajas') }}{% endif %}' + atlSearchParam(this.value, {% if query is defined %}'{{query}}'{% else %}null{% endif %}, null))">
             <option value="" {% if cat is not defined %}selected{% endif %}>Todas las categorías</option>
             {% for row in vigentes %}
             <option value="{{ row.id }}" {% if cat is defined %}{% if cat == row.id %}selected{% endif %}{% endif %}>{{ row.nombre }}{% if row.edadMax is not null %} ({{ row.edadMax }}){% endif %}</option>
@@ -61,7 +61,7 @@
       {% endif %}
       <div class="input-group col-xs-11 col-sm-4 pull-right">
          <input id="search-input" type="search" class="form-control" placeholder="Buscar"{% if query is defined %} value="{{query}}"{% endif %} onkeydown="checkEnterKeypress(event)">
-         <div class="input-group-btn"><button id="search-button" class="btn btn-default" type="button" onClick="goToUrl('{% if estadoAlta == true %}{{ path('listado_atletas') }}{% else %}{{ path('listado_atletas_bajas') }}{% endif %}' + atlSearchParam({% if cat is defined %}{{cat}}{% else %}null{% endif %}, getQuery()))"><span class="glyphicon glyphicon-search"></span></button></div>
+         <div class="input-group-btn"><button id="search-button" class="btn btn-default" type="button" onClick="goToUrl('{% if estadoAlta == true %}{{ path('listado_atletas') }}{% else %}{{ path('listado_atletas_bajas') }}{% endif %}' + atlSearchParam({% if cat is defined %}{{cat}}{% else %}null{% endif %}, getQuery(), null))"><span class="glyphicon glyphicon-search"></span></button></div>
       </div>
    </div>
    
@@ -125,7 +125,25 @@
          {% endfor %}
       </tbody>
    </table>
-   
+<nav>
+  <ul class="pager">
+     {% if from == 0 %}
+     <li class="previous disabled"><a href="#"><span aria-hidden="true">&larr;</span> Anterior</a></li>
+     {% else %}
+     <li class="previous"><a href="#" onClick="goToUrl('{% if estadoAlta == true %}{{ path('listado_atletas') }}{% else %}{{ path('listado_atletas_bajas') }}{% endif %}' + atlSearchParam({% if cat is defined %}{{cat}}{% else %}null{% endif %}, getQuery(), {{ from - numResultados }}))"><span aria-hidden="true">&larr;</span> Anterior</a></li>
+     {% endif %}
+     {% if atletas|length < numResultados %}
+        <li class="next disabled"><a href="#">Siguiente <span aria-hidden="true">&rarr;</span></a></li>
+     {% else %}
+        <li class="next"><a href="#" onClick="goToUrl('{% if estadoAlta == true %}{{ path('listado_atletas') }}{% else %}{{ path('listado_atletas_bajas') }}{% endif %}' + atlSearchParam({% if cat is defined %}{{cat}}{% else %}null{% endif %}, getQuery(), {{ from + numResultados }}))">Siguiente <span aria-hidden="true">&rarr;</span></a></li>
+     {% endif %}
+     {% if numResultados > 0 and from is divisible by (numResultados) %}
+     <p class="text-center text-info">Página {{ (from / numResultados) + 1 }}</p>
+     {% else %}
+     <p class="text-center text-info">Mostrando desde el resultado {{ from + 1 }}</p>
+     {% endif %}
+  </ul>
+</nav>
    
 {% endblock %}
 
