--- a/src/Easanles/AtletismoBundle/Resources/views/Prueba/list_prueba.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Prueba/list_prueba.html.twig
@@ -45,8 +45,8 @@
       <a type="button" class="btn btn-m btn-default pull-left hidden-xs" href="javascript:history.back()"><span class="glyphicon glyphicon-menu-left"></span> Volver</a>
       <button class="updater hidden" onClick="location.reload()"></button>
       <div class="col-xs-6 col-sm-4">
-         <select class="form-control" onChange="pruSearch({{ com.sid }}, this.value)">
-         <option value=""{% if selcat is not defined %} selected{% endif %}>Categoría</option>
+         <select id="select-cat" class="form-control" onChange="pruSearch({{ com.sid }}, this.value, null)">
+         <option value=""{% if selcat is not defined %} selected{% endif %}>Todas las categorías</option>
          {% for cat in categorias %}
             <option value="{{ cat.idCat }}"{% if selcat is defined %}{% if selcat == cat.idCat %} selected{% endif %}{% endif %}>{{ cat.nombre }}</option>
          {% endfor %}
@@ -135,7 +135,26 @@
          {% endfor %}
       </tbody>
    </table>
-   
+<nav>
+  <ul class="pager">
+     {% if from == 0 %}
+     <li class="previous disabled"><a href="#"><span aria-hidden="true">&larr;</span> Anterior</a></li>
+     {% else %}
+     <li class="previous"><a href="#" onClick="pruSearch({{ com.sid }}, $('#select-cat').val(), {{ from - numResultados }})"><span aria-hidden="true">&larr;</span> Anterior</a></li>
+     {% endif %}
+     {% if pruebas|length < numResultados %}
+        <li class="next disabled"><a href="#">Siguiente <span aria-hidden="true">&rarr;</span></a></li>
+     {% else %}
+        <li class="next"><a href="#" onClick="pruSearch({{ com.sid }}, $('#select-cat').val(), {{ from + numResultados }})">Siguiente <span aria-hidden="true">&rarr;</span></a></li>
+     {% endif %}
+     {% if numResultados > 0 and from is divisible by (numResultados) %}
+     <p class="text-center text-info">Página {{ (from / numResultados) + 1 }}</p>
+     {% else %}
+     <p class="text-center text-info">Mostrando desde el resultado {{ from + 1 }}</p>
+     {% endif %}
+  </ul>
+</nav>
+
 {% endblock %}
 
 {% block js %}
