--- a/src/Easanles/AtletismoBundle/Resources/views/Default/index.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Default/index.html.twig
@@ -40,7 +40,7 @@
                <span class="icon-bar"></span>
                <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{{ webRootDir }}"><span class="glyphicon glyphicon-home"></span> {{ gl_appname }}</a>
+            <a class="navbar-brand" href="{{ webRootDir }}">{{ gl_appname }}</a>
          </div>
          <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
@@ -109,7 +109,6 @@
           <li class="active">Portada</li>
        {% endblock %}
        </ol>
-       {% block dumpv %}{% if dumpv is defined %}{{ dump(dumpv) }}{% endif %}{% endblock %}
        {% block container %}
        <div class="container-fluid">
           <div class="row">
@@ -140,10 +139,6 @@
                    </div>
             
                    <button class="btn btn-lg btn-primary btn-block" type="submit">Entrar</button>
-                   <p><small class="muted-text">
-                      user: "userpass"<br>
-                      admin: "adminpass"
-                   </small></p>
                </form>
              </div>
           </div>
